src/pydjinni/generator/objc/it/objc/error/expected/include/objc/TSTThrowingCallback.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "TSTFooError.h"
@protocol TSTThrowingCallback 
- (void)throwingError:(NSError* _Nullable * _Nonnull)error;
@end
